搞定服务项目

--- a/src/css/lib-common.css
+++ b/src/css/lib-common.css
@@ -15,9 +15,6 @@ html {
 /**
  * Remove default margin.
  */
-body {
-  margin: 0;
-}
 /* HTML5 display definitions
    ========================================================================== */
 /**
@@ -30,7 +27,6 @@ figcaption,
 figure,
 footer,
 header,
-hgroup,
 main,
 nav,
 section,
@@ -352,28 +348,7 @@ td,
 th {
   padding: 0;
 }
-li,
-ul,
-dl,
-dd {
-  list-style: none;
-}
-body {
-  font-size: 16px;
-  font-family: "微软雅黑";
-  font-style: normal;
-  font-weight: normal;
-  color: #333333;
-  line-height: 1.4;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -moz-font-feature-settings: "liga" on;
-}
-a {
-  text-decoration: none;
-}
-h1,
+body h1,
 h2,
 h3,
 h4,
@@ -388,6 +363,21 @@ dd {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+a {
+  text-decoration: none;
+}
+body {
+  font-size: 16px;
+  font-family: "微软雅黑";
+  font-style: normal;
+  font-weight: normal;
+  color: #333333;
+  line-height: 1.4;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -moz-font-feature-settings: "liga" on;
 }
 .response-img {
   max-width: 100%;
@@ -424,6 +414,12 @@ dd {
   width: 1170px;
   height: auto;
   overflow: hidden;
+}
+.pd-v50 {
+  padding: 50px 0;
+}
+.pd-h50 {
+  padding: 0 50px;
 }
 .block {
   display: block;
@@ -485,7 +481,7 @@ dd {
   font-size: 16px;
 }
 .f18 {
-  font-size: 16px;
+  font-size: 18px;
 }
 .f20 {
   font-size: 20px;
@@ -590,6 +586,7 @@ dd {
   float: right;
   position: relative;
   text-align: center;
+  zoom: 1;
   height: 100px;
   line-height: 100px;
 }
@@ -597,6 +594,15 @@ dd {
 #header #navBar li {
   float: left;
   margin-right: 0;
+}
+#header #navBar:before {
+  content: '';
+  display: block;
+}
+#header #navBar:after {
+  content: '';
+  display: table;
+  clear: both;
 }
 #header #navBar .nav > li {
   position: relative;
