--- a/src/css/lib-reset.css
+++ b/src/css/lib-reset.css
@@ -15,6 +15,9 @@ html {
 /**
  * Remove default margin.
  */
+body {
+  margin: 0;
+}
 /* HTML5 display definitions
    ========================================================================== */
 /**
@@ -27,6 +30,7 @@ figcaption,
 figure,
 footer,
 header,
+hgroup,
 main,
 nav,
 section,
@@ -348,22 +352,9 @@ td,
 th {
   padding: 0;
 }
-body h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-figure,
-dl,
-ol,
-ul,
 li,
+ul,
+dl,
 dd {
-  margin: 0;
-  padding: 0;
   list-style: none;
-}
-a {
-  text-decoration: none;
 }
