--- a/src/css/pages/index.css
+++ b/src/css/pages/index.css
@@ -15,6 +15,9 @@ html {
 /**
  * Remove default margin.
  */
+body {
+  margin: 0;
+}
 /* HTML5 display definitions
    ========================================================================== */
 /**
@@ -27,6 +30,7 @@ figcaption,
 figure,
 footer,
 header,
+hgroup,
 main,
 nav,
 section,
@@ -348,7 +352,28 @@ td,
 th {
   padding: 0;
 }
-body h1,
+li,
+ul,
+dl,
+dd {
+  list-style: none;
+}
+body {
+  font-size: 16px;
+  font-family: "微软雅黑";
+  font-style: normal;
+  font-weight: normal;
+  color: #333333;
+  line-height: 1.4;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -moz-font-feature-settings: "liga" on;
+}
+a {
+  text-decoration: none;
+}
+h1,
 h2,
 h3,
 h4,
@@ -363,21 +388,6 @@ dd {
   margin: 0;
   padding: 0;
   list-style: none;
-}
-a {
-  text-decoration: none;
-}
-body {
-  font-size: 16px;
-  font-family: "微软雅黑";
-  font-style: normal;
-  font-weight: normal;
-  color: #333333;
-  line-height: 1.4;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -moz-font-feature-settings: "liga" on;
 }
 .response-img {
   max-width: 100%;
@@ -414,12 +424,6 @@ body {
   width: 1170px;
   height: auto;
   overflow: hidden;
-}
-.pd-v50 {
-  padding: 50px 0;
-}
-.pd-h50 {
-  padding: 0 50px;
 }
 .block {
   display: block;
@@ -481,7 +485,7 @@ body {
   font-size: 16px;
 }
 .f18 {
-  font-size: 18px;
+  font-size: 16px;
 }
 .f20 {
   font-size: 20px;
@@ -586,7 +590,6 @@ body {
   float: right;
   position: relative;
   text-align: center;
-  zoom: 1;
   height: 100px;
   line-height: 100px;
 }
@@ -594,15 +597,6 @@ body {
 #header #navBar li {
   float: left;
   margin-right: 0;
-}
-#header #navBar:before {
-  content: '';
-  display: block;
-}
-#header #navBar:after {
-  content: '';
-  display: table;
-  clear: both;
 }
 #header #navBar .nav > li {
   position: relative;
@@ -837,6 +831,18 @@ body {
 #sideBar ul > li:hover {
   background-color: #d33331;
 }
+.icon-Q:before {
+  background: url("../img/icon-1.png") no-repeat -174px -152px;
+}
+.icon-C:before {
+  background: url("../img/icon-1.png") no-repeat 0 -152px;
+}
+.icon-P:before {
+  background: url("../img/icon-1.png") no-repeat -58px -152px;
+}
+.icon-E:before {
+  background: url("../img/icon-1.png") no-repeat -116px -152px;
+}
 .slider {
   position: relative;
   height: auto;
@@ -894,21 +900,11 @@ body {
 }
 #service {
   background-color: #f8f8f8;
-  zoom: 1;
 }
 #service dl,
 #service li {
   float: left;
   margin-right: 0;
-}
-#service:before {
-  content: '';
-  display: block;
-}
-#service:after {
-  content: '';
-  display: table;
-  clear: both;
 }
 #service .service-list {
   position: relative;
@@ -1286,38 +1282,36 @@ body {
 #aboutUs > .box {
   position: relative;
   display: block;
-  background: url("../img/bground/aboutUs-people-show.png") no-repeat center;
+  background: url("../img/aboutUs-people-show.png") no-repeat 0 center;
   height: 600px;
-  overflow: visible;
 }
-#aboutUs > .box > .response-img {
-  vertical-align: middle;
-  padding-right: 50px;
+#aboutUs > .box .span {
+  display: none;
 }
 #aboutUs > .box > .arrow {
   position: absolute;
   text-align: right;
   padding-right: 10px;
   margin-top: -30px;
-  font-size: 60px;
-  font-family: "AvenirLTStd-Black";
-  font-style: normal;
-  font-weight: 800;
   color: #412106;
   width: 100px;
   height: 60px;
   line-height: 60px;
   top: 50%;
-  right: -20px;
+  right: 0;
   letter-spacing: -15px;
   z-index: 99;
+  font-size: 60px;
+  font-family: "AvenirLTStd-Black";
+  font-style: normal;
+  font-weight: 800;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-color: #412106;
-  /* 设置渐变的背景，按对角线渐变 */
   background-image: -webkit-linear-gradient(-45deg, rgba(0, 0, 0, 0.6) 30%, #f9cf93 50%, rgba(0, 0, 0, 0.6) 70%);
-  /* 设置背景为混合模式下的强光模式 */
+  /* 设置渐变的背景，按对角线渐变 */
   background-blend-mode: hard-light;
+  /* 设置背景为混合模式下的强光模式 */
   background-size: 240%;
   -webkit-animation: shine 3s infinite;
 }
